<resources>
    <string name="app_name">Tersicore</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="ipb">IP Background</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_first_ip">Insert IP</string>

    <!-- Strings related to login -->
    <string name="prompt_ip">Insert server URL here </string>
    <string name="login_hint">You can remove this server or add more servers later in the Settings page</string>
    <string name="action_sign_in">Begin</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Player</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_main3">Home</string>
    <string name="title_activity_artists">Artists</string>
    <string name="title_activity_albums">Albums</string>
    <string name="title_activity_tracks">Songs</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="showmore">show more</string>
    <string name="showall">show all</string>
    <string name="title_activity_artist">Artist</string>
    <string name="title_activity_album">Album</string>
    <string name="title_activity_playlist">Playlist</string>
    <string name="title_activity_playlists">Playlists</string>
    <string name="no_suggestion_added">No suggestion added</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_cache_entries">
        <item>32 MB</item>
        <item>64 MB</item>
        <item>128 MB</item>
        <item>256 MB</item>
        <item>512 MB</item>
        <item>1024 MB</item>
    </string-array>
    <string-array name="pref_sync_cache_values">
        <item>32</item>
        <item>64</item>
        <item>128</item>
        <item>256</item>
        <item>512</item>
        <item>1024</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="searchAlbum">Search Album</string>
    <string name="searchTrack">Search Track</string>
    <string name="AlbumSugg">Album Suggested:</string>
    <string name="TrackSugg">Track Suggested:</string>
    <string name="WifiQualityPrefKey">PreferredQualityWiFi</string>
    <string name="WifiQualityPrefTitle">Preferred Quality on Wi-Fi</string>
    <string name="DeleteCacheTitle">Delete All Cached Tracks</string>
    <string name="DeleteCacheKey">deleteCached</string>
    <string name="DeleteCacheSummay">Downloaded Tracks not deleted.</string>
    <string name="PreferOfflineKey">PreferOffline</string>
    <string name="PreferOfflineTitle">Prefer Offline Tracks if Available</string>
    <string name="ResourcesTitleManagement">Resources Management</string>
</resources>
