<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Server">
        <Preference
            android:title="Manage Servers"
            android:key="manageservers"
            android:summary="Add or remove servers"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Internal Database">
    <Preference android:title="Rebuild internal database"
    android:key="updateservers"
    android:summary="It could take time"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/ResourcesTitleManagement">
        <ListPreference
            android:key="@string/WifiQualityPrefKey"
            android:title="@string/WifiQualityPrefTitle"
            android:entries="@array/pref_sync_quality_entries"
            android:entryValues="@array/pref_sync_quality_values"
            android:defaultValue="1"
            />
        <ListPreference
            android:key="PreferredQualityData"
            android:title="Preferred Quality on Cellular Data"
            android:entries="@array/pref_sync_quality_entries"
            android:entryValues="@array/pref_sync_quality_values"
            android:defaultValue="1"
            />
        <ListPreference
            android:key="CacheSize"
            android:title="Cache Size"
            android:entries="@array/pref_sync_cache_entries"
            android:entryValues="@array/pref_sync_cache_values"
            android:defaultValue="512"
            />
        <Preference
            android:title="@string/DeleteCacheTitle"
            android:key="@string/DeleteCacheKey"
            android:summary="@string/DeleteCacheSummay"/>
        <CheckBoxPreference
            android:key="@string/PreferOfflineKey"
            android:title="@string/PreferOfflineTitle"
            android:defaultValue="true"
            />
        <CheckBoxPreference
            android:key="DataProtection"
            android:title="Enable Data Protection"
            android:summary="High Bitrate files will be skipped if Low Quality is selected"
            android:defaultValue="true"
            />
        <Preference
            android:title="Delete All Downloaded Tracks"
            android:key="deletedownloaded"
            android:summary="Cached Tracks not deleted. It could take time"/>
    </PreferenceCategory>
</PreferenceScreen>
